src/test/deca/syntax/valid/created/protected_items/field.deca
// Description:
//		Definir un champ comme protected de maniere explicite
// Resultats:
//		OK

class A {
	protected int x;
}

