src/test/deca/syntax/invalid/created/public_items/method.deca
// Description:
//		Definir une methode comme public de maniere explicite
// Resultats:
//		Erreur syntaxe Ligne 7 : no viable alternative at input 'publicintgetX'

class A {
    public int getX(){}
}

